--- a/gitlabui/templates/layout.html
+++ b/gitlabui/templates/layout.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <title>gitlabui {% block title %}{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static',filename='favicon.svg') }}">
-    <!-- CSS only -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -37,6 +37,8 @@
 
 <footer class="footer mt-auto py-3">
 </footer>
+
+{% block javascript %}{% endblock %}
 
 </body>
 
