--- a/gitlabui/templates/layout.html
+++ b/gitlabui/templates/layout.html
@@ -19,15 +19,37 @@
 <body class="d-flex flex-column h-100">
 
 <header>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="{{ url_for('static',filename='favicon.svg') }}" alt="" width="30"
                      class="d-inline-block align-text-top mx-2">
-                {{ self.title() }}
+                gitlabui
             </a>
-            <div class="d-flex">
-                {% block menu %}{% endblock %}
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+{% set navs = [
+    ('/tags', 'index', 'Tags'),
+    ('/search', 'search', 'Search')
+] -%}
+{% set active_page = active_page|default('index') -%}
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                {% for href, id, caption in navs %}
+                    <li class="nav-item">
+                        <a
+                                class="nav-link {{ 'active' if id == active_page }}"
+                                href="{{ href|e }}">
+                            {{ caption|e }}
+                        </a>
+                    </li>
+                {% endfor %}
+                </ul>
+                <form class="d-flex">
+                    {% block menu %}{% endblock %}
+                </form>
             </div>
         </div>
     </nav>
